# api/src/types/index.ts
@@ -12,4 +12,3 @@ export * from './migration';
 export * from './revision';
 export * from './services';
 export * from './snapshot';
-export * from './webhooks';
