# packages/specs/src/openapi.yaml
@@ -79,9 +79,6 @@ tags:
     x-collection: directus_users
   - name: Utilities
     description: Directus comes with various utility endpoints you can use to simplify your development flow.
-  - name: Webhooks
-    description: Webhooks.
-    x-collection: directus_webhooks
 paths:
   # Activity
   /activity:
@@ -220,12 +217,6 @@ paths:
   /utils/sort/{collection}:
     $ref: './paths/utils/sort.yaml'
 
-  # Webhooks
-  /webhooks:
-    $ref: './paths/webhooks/webhooks.yaml'
-  /webhooks/{id}:
-    $ref: './paths/webhooks/webhook.yaml'
-
 components:
   schemas:
     Activity:
@@ -254,8 +245,6 @@ components:
       $ref: './components/setting.yaml'
     Users:
       $ref: './components/user.yaml'
-    Webhooks:
-      $ref: './components/webhook.yaml'
   parameters:
     # All path parameters
     Id:
